--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -15,7 +15,7 @@
 			display: block;
 			position: absolute;
 			top: 100px;
-			left: 0px;  /* <--- Change me! */
+			left: 300px;  /* <--- Change me! */
 		}
 		.board{
 			height: 100vh;
@@ -63,7 +63,9 @@
 			
 			// TODO 2 - Variable declarations 
 			
-
+			var positionX = 0;
+			var points = 0;
+			var speed = 10;
 			
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -71,7 +73,20 @@
 			turn it around! 
 			*/
 			function update() {
-				
+
+				positionX = positionX + speed;
+
+				moveBoxTo(positionX);
+
+				if(positionX >= boardWidth)
+				{
+					speed = -speed;
+				}
+
+				if(positionX < 0)
+				{
+					speed = -speed;
+				}
 
 			};
 
@@ -81,7 +96,21 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				
+
+				 positionX = 0;
+
+				 points = points + 1;
+
+				 changeBoxText(points);
+
+				 if(speed > 0)
+				 {
+					speed = speed + 3;
+				 }
+				 else
+				 {
+					speed = speed - 3;
+				 }
 
 
 			};
